--- a/live1/assets/css/style.css
+++ b/live1/assets/css/style.css
@@ -337,7 +337,7 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	background: #fff;
 	color: #333;
-	font-family: "'Noto Sans JP', sans-serif";
+	font-family: "";
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 1.6;
@@ -591,11 +591,11 @@ summary {
 	align-items: center;
 	background: #000;
 	display: flex;
-	height: 11px;
+	height: 30px;
 	justify-content: center;
 	padding: 10px;
 	position: absolute;
-	width: 22px;
+	width: 30px;
 	z-index: 999;
 }
 
@@ -612,7 +612,7 @@ summary {
 }
 
 .c-hamburger span:nth-of-type(1) {
-	top: 24px;
+	top: 15px;
 }
 
 .c-hamburger span:nth-of-type(3) {
@@ -622,19 +622,6 @@ summary {
 .c-test {
 	color: red;
 	font-size: 1.25rem;
-}
-
-.p-mv {
-	position: relative;
-}
-
-.p-mv::after {
-	background-color: #222;
-	height: 100hv;
-	left: 0;
-	position: absolute;
-	top: 0;
-	width: 75.5%;
 }
 
 .p-test {
